fix z-index on sub-menu

--- a/assets/css/sass/content/pages/_explore.scss
+++ b/assets/css/sass/content/pages/_explore.scss
@@ -397,7 +397,7 @@
 		visibility: hidden;
 		&.visible {
 			position: relative;
-			z-index: auto;
+			z-index: 0;
 			visibility: visible;
 		}
 
